--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 <title>Conway's Game of Life</title>
 <meta name="description" content="A JavaScript version of Conway's Game of Life, based on the Hashlife-algorithm.">
 <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<style>body {
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
+    body {
     background-color: #000;
     margin: 0px;
     color: #ccc;
-    font-family: sans-serif;
+    font-family: 'Major Mono Display';
     height: 100%;
     overflow: hidden;
 }
