--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     background-color: #000;
     margin: 0px;
     color: #ccc;
-    font-family: 'Major Mono Display';
+    font-family: 'Major Mono Display', monospace;
     height: 100%;
     overflow: hidden;
 }
