--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@ H.value;var M=T[H];d(M.content,void 0,M.raw_url,"https://copy.sh/life/?gist="+Z,
     <div id="loading_popup" style="display: none; font-size: 16px">
         <div style="text-align: center">
             <h2>Downloading pattern file</h2>
-            Please wait a second.<br><br>
+            Please wait a second. (Click "settings" in the corner and then the save button. This pattern thing is a bug to be fixed soon)<br><br>
             <img src="http://copy.sh/life/pattern.gif" style="image-rendering: crisp-edges; image-rendering: pixelated" width="324" height="210" alt="Bi Gun">
         </div>
     </div>
