--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     font-family: 'Major Mono Display', monospace;
     height: 100%;
     overflow: hidden;
-    cursor: url("https://ldstabler.github.io/resources/dmz/left_ptr.png");
+    cursor: url('https://ldstabler.github.io/resources/dmz/left_ptr.png');
 }
 html {
     height: 100%;
