--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     font-family: 'Major Mono Display', monospace;
     height: 100%;
     overflow: hidden;
-    cursor: url('https://ldstabler.github.io/resources/dmz/left_ptr.png');
+    cursor: url('https://ldstabler.github.io/resources/dmz/left_ptr.png'),auto;
 }
 html {
     height: 100%;
@@ -50,7 +50,7 @@ html {
     font-weight: bold;
     text-align: center;
 
-    cursor: url("https://ldstabler.github.io/resources/dmz/hand2.png");
+    cursor: url("https://ldstabler.github.io/resources/dmz/hand2.png"),auto;
     box-shadow: 2px 2px 3px #ccc;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -89,7 +89,7 @@ html {
 }
 .button, .menu > div {
     background-color: #ccc;
-    cursor: url("https://ldstabler.github.io/resources/dmz/hand2.png");
+    cursor: url("https://ldstabler.github.io/resources/dmz/hand2.png"),auto;
     padding: 0px 0.5vw;
     margin-right: 1vw;
     margin-bottom: 7px;
@@ -133,11 +133,11 @@ html {
     }
 }
 #pattern_name {
-    cursor: url("https://ldstabler.github.io/resources/dmz/hand2.png");
+    cursor: url("https://ldstabler.github.io/resources/dmz/hand2.png")auto;
 }
 .button2 {
     border: 1px solid #fff;
-    cursor: url("https://ldstabler.github.io/resources/dmz/hand2.png");
+    cursor: url("https://ldstabler.github.io/resources/dmz/hand2.png"),auto;
     padding: 5px 20px;
     margin: 0px 20px;
 }
@@ -168,7 +168,7 @@ input[type=number], input[type=text] {
 a, .link {
     color: #ff0;
     padding: 0px 1px;
-    cursor: url("https://ldstabler.github.io/resources/dmz/hand2.png");
+    cursor: url("https://ldstabler.github.io/resources/dmz/hand2.png"),auto;
     text-decoration: none;
 }
 a:hover, .link:hover {
@@ -191,7 +191,7 @@ canvas {
     padding: 3px;
     float: left;
     width: 215px;
-    cursor: url("https://ldstabler.github.io/resources/dmz/hand2.png");
+    cursor: url("https://ldstabler.github.io/resources/dmz/hand2.png"),auto;
 }
 #pattern_chooser > div > div:hover {
     color: #000;
