--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <title>Conway's Game of Life</title>
 <meta name="description" content="A JavaScript version of Conway's Game of Life, based on the Hashlife-algorithm.">
 <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<style>
+<link rel="shortcut icon" type="image/jpg" href="preview.png"/>
+
+    <style>
     @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
     body {
     background-color: #000;
